adding public folder

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "postbuild": "rm -Rf docs && mv public docs"
   },
   "dependencies": {
     "@mdx-js/mdx": "v1",
